# PFLFunction

./: .gitignore  CITATION.cff  README.md  environment.yml  pyproject.toml
.github/workflows/: main.yml
scripts/: create_inputs.py  delete_inputs.py  example.ipynb  generate_zeta.py  input_data.txt  parallel_zeta.sh
src/pflfunction/: W_matrix.py  multipoint_evaluation.py  one_parameter_zeta_functions.py
src/pflfunction/PicardFuchs/: CYnOperatorPeriods.py  EtildeOneParam.py
src/pflfunction/pAdic/: p_adic_utilities.py  rational_multiparameter_series.py
src/pflfunction/pAdic/precomputed_data/: zeta3_values.db
tests/: test_core.py
